<package format="3">
  <name>nav_engine</name>
  <version>1.0.0</version>
  <license>GPL-3.0</license> <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
